--- a/Street-Food-master/style.css
+++ b/Street-Food-master/style.css
@@ -3,23 +3,31 @@
     line-height: 20pt;
     padding: 5px;
     margin: 13px 0;
-
+}
+html,body{
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
 }
 #header {
-    Background-Color: rgb(208, 209, 208);
+    Background-Color: rgb(209, 208, 208);
     padding: 10px 15px;
     box-sizing: border-box;
-    margin: 50px 0px;
+    margin: 0px 0px 50px;
 }
-
-
+#header nav{
+    position: relative;
+    z-index: 1;
+}
 ul {
     list-style-type: none;
     display: flex;
     justify-content: space-between;
     text-align: center;
+
     
 }
+
 li a{
     color: black;
     text-decoration: none;
@@ -46,6 +54,7 @@ li a{
     width: 100px;
     height: 100px;
     margin-left: 80%;
+    z-index: 1;
 }
   
 .eclipse img:first-child {
@@ -67,7 +76,18 @@ li a{
 .eclipse img:nth-child(5) {
     transform: rotate(-90deg) translateY(-200px);
 }
-
+.curved-picture {
+    width: 1000px;
+    height: 1000px;
+    top: 0px;
+    right: 0px;
+    background-color: #6CB840;
+    position:absolute;
+    z-index: 0;
+    transform: translate(60px, -50%);
+    overflow: hidden;
+    border-radius: 50%;
+}
 #steet-food {
     height: auto;
     width: 380px;
@@ -77,10 +97,7 @@ li a{
     font-size: large;
     font-family: popins;
 }
-footer > div:nth-child(2){
-    border-left: 2px dashed lightgreen;
-    padding-left: 20px;
-}
+
 .main {
     display: flex;
     flex-direction: row;
@@ -94,8 +111,9 @@ footer > div:nth-child(2){
 .deals {
     text-align: center;
     background-color: #C9ECB5;
-    padding: 25px 50px 25px 50px;
+    padding: 25px 50px 25x 50px;
     height: 600px;
+    margin-right: -150px;
 }
 
 .juice{
@@ -171,13 +189,11 @@ footer > div:nth-child(2){
     justify-content: space-evenly;
     align-items: left;
     background-color: white;
-    margin-right: 15px;
+    margin-right: 80px;
     border-radius: 8px;
     
 }
-.menu p {
-    color:violet;
-}
+
 .menu img{
     float:left;
     position: relative;
