--- a/index.css
+++ b/index.css
@@ -67,6 +67,18 @@ li a{
 .eclipse img:nth-child(5) {
     transform: rotate(-90deg) translateY(-200px);
 }
+.curved-picture {
+    width: 1000px;
+    height: 1000px;
+    top: 0px;
+    right: 0px;
+    background-color: #6CB840;
+    position:absolute;
+    z-index: 0;
+    transform: translate(60px, -50%);
+    overflow: hidden;
+    border-radius: 50%;
+}
 
 #street-food {
     height: auto;
