--- a/index.css
+++ b/index.css
@@ -11,7 +11,10 @@
     box-sizing: border-box;
     margin: 50px 0px;
 }
-
+#header nav{
+    position: relative;
+    z-index: 1;
+}
 
 ul {
     list-style-type: none;
@@ -67,7 +70,7 @@ li a{
 .eclipse img:nth-child(5) {
     transform: rotate(-90deg) translateY(-200px);
 }
-.curved-picture {
+.semi-circle{
     width: 1000px;
     height: 1000px;
     top: 0px;
@@ -77,7 +80,7 @@ li a{
     z-index: 0;
     transform: translate(60px, -50%);
     overflow: hidden;
-    border-radius: 50%;
+    border-radius: 100%;
 }
 
 #street-food {
@@ -258,3 +261,5 @@ footer {
     font-weight: 700;
     font-size: large;
 }
+
+
